Modified new category form for nested routes

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@category) do |f| %>
+<%= form_for([@question,@category]) do |f| %>
   <%= f.label :tag_name %>:
 <%= f.text_field :tag_name %>
 <%= f.submit "Add Tag" %>
