Working Category new form

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Categories</h1>
 <% @categories.each do |category| %>
-	<div class="tag">category</div>
+	<div class="tag"><%= category.tag_name %></div>
 <% end %>
