--- a/app/views/favorites/edit.html.erb
+++ b/app/views/favorites/edit.html.erb
@@ -1,12 +1,5 @@
 <%= form_for(:favorite, url: review_path, method: :patch) do |f| %>
-  <%= f.label :Artist%>
-  <%= f.text_field :artist %>
-<br>
-  <%= f.label :Album %>
-  <%= f.text_field :album %>
-<br>
-  <%= f.label :Content %>
-  <%= f.text_field :content %>
+  <%= f.hidden_field :question_id %>
 <br>
   <%= f.hidden_field :user_id %>
 <br>
