--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -3,8 +3,8 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
 
-  <%= f.label :content %>
-  <%= f.text_area :content %><br>
+  <%= f.label :description %>
+  <%= f.text_area :description %><br>
 
   <%= f.submit "edit question" %>
 <% end %>
