--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,1 +1,11 @@
-new.html.erb
+<%= form_for(@question) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.label :description %>
+  <%= f.text_area :description %><br>
+
+  <%= f.hidden_field(:user_id, :value => session[:user_id]) %>
+
+  <%= f.submit "create new question" %>
+<% end %>
