--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,7 @@
 <%= form_for @user do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
   <%= f.label :password %>
   <%= f.text_field :password %>
-  <%= f.submit "Log In" %>
+  <%= f.submit "Create" %>
 <% end %>
