--- a/app/views/categories/_index.html.erb
+++ b/app/views/categories/_index.html.erb
@@ -1,4 +1,4 @@
-<h1>Categories</h1>
+<h3>Tags</h3>
 <% @categories.each do |category| %>
 	<div class="tag"><%= category.tag_name %></div>
 <% end %>
