--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,17 +20,20 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<%if session[:user_id]%>
-					<li><%= link_to "Logout", logout_path %></li>
-					<li><%= link_to "Profile", user_path(session[:user_id]) %></li>
-					<%else%>
-					<li><%= link_to "Login", new_session_path %></li>
-					<li><%= link_to "Sign Up", new_user_path %></li>
-					<% end %>
-					<li><%= link_to "All Questions", questions_path %></li>
+
+
+					<% if current_user %>
+					<li><%= link_to "My Dashboard", user_path(current_user.id) %></li>
+					<li><%= link_to "Log Out", logout_path %></li>
+
+					<% else %>
+					<li><%= link_to "Log In", new_session_path %></li>
+
+					<% end %>		
+
 				</ul>
-				<form class="navbar-form navbar-right">
-					<input type="text" class="form-control" placeholder="Search..."> <button class="search"><i class="glyphicon glyphicon-search white"></i></button>
+				<form method="get" action="/search" class="navbar-form navbar-right">
+					<input type="text" name="search" class="form-control" placeholder="Search..."> <button class="search"><i class="glyphicon glyphicon-search white"></i></button>
 				</form>
 			</div><!--/.navbar-collapse -->
 		</div>
