Improved look and feel of show questions and partials

--- a/app/views/answers/_index.html.erb
+++ b/app/views/answers/_index.html.erb
@@ -1,4 +1,10 @@
-<%answers.each do |answer|%>
-  <%= answer.content%><br>
-<% end %>
 
+
+
+<%answers.each do |answer|%>
+<div class="well">
+  <p><%= answer.content%></p>
+  <p class="text-info"> Posted by <%= "#{answer.user.name} on #{nice_date answer.created_at}" %> </p>
+  </div>
+
+<% end %>
