--- a/app/views/answers/_new.html.erb
+++ b/app/views/answers/_new.html.erb
@@ -1,9 +1,11 @@
 <%= form_for([question,answer]) do |f| %>
+<div class="form-group">
   <%= f.label "Answer the question" %><br>
-  <%= f.text_field :content %>
-<br>
+  <%= f.text_area :content, size: '50x10', :class => 'form-control' %>
+
+</div>
   <%= f.hidden_field :user_id, value: 1 %>
   <%= f.hidden_field :question_id, value: question.id %>
 <br>
-  <%= f.submit "Submit" %>
+  <%= f.submit "Add Question", :class => 'btn btn-success' %>
 <% end %>
