--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Make Sense OverFlow</a>
+				
+				<%= link_to "Make Sense OverFlow", root_path, :class => "navbar-brand" %>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -33,6 +34,7 @@
 					<li><%= link_to "Log In", new_session_path %></li>
 
 					<% end %>		
+
 
 				</ul>
 				<form method="get" action="/search" class="navbar-form navbar-right">
