--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,13 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+				<% if @session_user %>
+        <li><%= link_to @session_user.name, @session_user %></li>
+        <li><a href="/sessions/logout">Logout</a></li>
+        <% else %>
+        <li><a href="/sessions/new">Log In</a></li>
+        <li><a href="/users/new">Sign Up</a></li>
+	      	<% end %>
 					<li><%= link_to "All Questions", questions_path %></li>
 					<li><%= link_to "Dashboard", user_path(1) %></li>
 				</ul>
