--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,7 @@
   <%= f.text_field :email %>
   <%= f.label :password %>
   <%= f.text_field :password %>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
   <%= f.submit "Create" %>
 <% end %>
