--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,14 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+					<%if session[:user_id]%>
+					<li><%= link_to "Logout", logout_path %></li>
+					<li><%= link_to "Profile", user_path(session[:user_id]) %></li>
+					<%else%>
+					<li><%= link_to "Login", new_session_path %></li>
+					<li><%= link_to "Sign Up", new_user_path %></li>
+					<% end %>
 					<li><%= link_to "All Questions", questions_path %></li>
-					<li><%= link_to "Dashboard", user_path(1) %></li>
 				</ul>
 				<form class="navbar-form navbar-right">
 					<input type="text" class="form-control" placeholder="Search..."> <button class="search"><i class="glyphicon glyphicon-search white"></i></button>
