--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@question) do |f| %>
 
-  <%= f.label :title %>
+  <%= f.label :title %><br>
   <%= f.text_field :title %>
-
-  <%= f.label :description %>
+<br>
+  <%= f.label :description %><br>
   <%= f.text_area :description %><br>
-
+<br>
   <%= f.submit "edit question" %>
 <% end %>
