--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Make Sense OverFlow</a>
+				<a class="navbar-brand" href="/">MakeSense<strong>Overflow</strong></a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -27,12 +27,12 @@
 					<li><%= link_to "Login", new_session_path %></li>
 					<li><%= link_to "Sign Up", new_user_path %></li>
 					<% end %>
-					<li><%= link_to "All Questions", questions_path %></li>
+					<li><%= link_to "All Questions", root_url %></li>
 				</ul>
 				<form class="navbar-form navbar-right">
 					<input type="text" class="form-control" placeholder="Search..."> <button class="search"><i class="glyphicon glyphicon-search white"></i></button>
 				</form>
-			</div><!--/.navbar-collapse -->
+			</div>
 		</div>
 	</nav>
 	<div class="container">
