--- a/app/views/answers/_index.html.erb
+++ b/app/views/answers/_index.html.erb
@@ -1,10 +1,8 @@
-
-
-
+<%# perfect place for a partial, they tend to emerge where we are eaching over a plural and want to display a singular %>
 <%answers.each do |answer|%>
-<div class="well">
-  <p><%= answer.content%></p>
-  <p class="text-info"> Posted by <%= "#{answer.user.name} on #{nice_date answer.created_at}" %> </p>
+  <div class="well">
+    <p><%= answer.content%></p>
+    <p class="text-info"> Posted by <%= "#{answer.user.name} on #{nice_date answer.created_at}" %> </p>
   </div>
 
 <% end %>
