--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,10 +4,11 @@
   <p><%= @question.description %></p>
 </div>
 
-<% if @question.user_id == session[:user_id] %>
-<%= link_to "edit", edit_question_path(@question)%>
-<%= link_to "delete", question_path(@question), method: "delete" %><br>
+<% if user_owns_this_question? %>
+  <%= link_to "edit", edit_question_path(@question)%>
+  <%= link_to "delete", question_path(@question), method: "delete" %><br>
 <% end %>
+
 <%= render partial: "categories/index", locals: {categories: @categories, question: @question}%>
 <%= render partial: "categories/new", locals: {category: @category, question: @question}%>
 
